--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-query": "^3.39.3",
-		"scss": "^0.2.4"
+		"sass": "^1.69.5"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
